# i-love-you-r3000

./: .gitignore  CMakeLists.txt  README.md
docs/: Assembler.md  GUI.md  Memory.md  Tradeoffs.md
ivu3k/: CMakeLists.txt  cachewidget.cpp  codewidget.cpp  codewidget.h  dramwidget.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  registerswidget.cpp
ivu3k/asm/: CMakeLists.txt  assembler.cpp  assembler.h
ivu3k/mem/: registers.h
src/: CMakeLists.txt
src/asm/: #CMakeLists.txt#  .#CMakeLists.txt  CMakeLists.txt  asm_main.cpp  assembler.cpp  assembler.h
src/asm/in/: 1to100.ily  1to100.r3k  NOLOADS-matmul.ily  annotated-matmul.IDK  bar.ily  cache_evict.ily  dependency-test.ily  exchange_sort.ily  exchange_sort.r3k  exchange_sort_100.ily  exchange_sort_100.r3k  exchange_sort_gen.py  fib.ily  foo.ily  foobar.ily  for-loop.ily  gen_sw_asm.py  generate-matrix-header.py  label-test-2.ily  label-test.ily  load_instr_dirver.py  matmul.ily  matmul.r3k  matmul_4x4.ily  matmul_huge.driver  matmul_huge.ily  matmul_huge.r3k  test_beq.ily  test_noop.ily  vec-mul.ily
src/gui/: CMakeLists.txt  cachewidget.cpp  cachewidget.h  dramwidget.h  mainwindow.cpp  registerswidget.h
src/mem/: CMakeLists.txt  a.out  cache-driver.cpp  cache.cpp  cache.h  mem-demo.cpp  mem-driver.cpp  memory.cpp  memory.h  memory_system.h  registers.h
src/memory-1/: memory.h
src/pipeline/: Makefile  clock.cpp  decode_stage.cpp  decode_stage.h  driver.cpp  execute_stage.cpp  execute_stage.h  fetch_stage.cpp  fetch_stage.h  memory_stage.cpp  memory_stage.h  memstage.cpp  pipeline.cpp  run.sh  writeback_stack.cpp  writeback_stage.cpp  writeback_stage.h  writebackstage.cpp
src/simulator/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
test/mem/: a.out  test.instr  test1.instr  test_cache.cpp  test_memory.cpp
